--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BOOTSTRAP</title>
+    <title>BOOTSTRAP Page one </title>
 <!-- LINK HEAD BOOTSTRAP cdn descargado-->
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="./TPboots.css" > <!-- CSS custumisado-->
